@@ -3,25 +3,24 @@ package com.example.tasktracker.security;
 import io.jsonwebtoken.Claims;
 import io.jsonwebtoken.JwtException;
 import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
 import io.jsonwebtoken.security.Keys;
 import org.springframework.beans.factory.annotation.Value;
-import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.GrantedAuthority;
-import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.stereotype.Component;
 
 import java.security.Key;
-import java.util.ArrayList;
 import java.util.Date;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class JwtTokenProvider {
 
-    private final Key key = Keys.secretKeyFor(SignatureAlgorithm.HS512);
+    private final Key key;
+
+    public JwtTokenProvider(@Value("${jwt.secret}") String secret) {
+        this.key = Keys.hmacShaKeyFor(secret.getBytes());
+    }
 
     @Value("${jwt.expiryTimeInMs}")
     private Long jwtExpirationInMs;
@@ -31,7 +30,7 @@ public class JwtTokenProvider {
 
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
 
         Date now = new Date();
         Date expiryDate = new Date(now.getTime() + jwtExpirationInMs);
@@ -54,26 +53,13 @@ public class JwtTokenProvider {
         }
     }
 
-    public Authentication getAuthentication(String token) {
+    public String getEmailFromToken(String token) {
         Claims claims = Jwts.parserBuilder()
                 .setSigningKey(key)
                 .build()
                 .parseClaimsJws(token)
                 .getBody();
 
-        String email = claims.getSubject();
-
-        List<GrantedAuthority> authorities = new ArrayList<>();
-
-        Object rolesObject = claims.get("roles");
-        if (rolesObject instanceof List<?>) {
-            authorities = ((List<?>) rolesObject).stream()
-                    .filter(role -> role instanceof String)
-                    .map(role -> new SimpleGrantedAuthority((String) role))
-                    .collect(Collectors.toList());
-        }
-
-        return new UsernamePasswordAuthenticationToken(email, null, authorities);
+        return claims.getSubject();
     }
-
 }
